# balatro-portrait-mobile

./: .buildconfig.json  .gitattributes  .gitignore  .luacheckrc  .mailmap  CHANGELOG.md  LICENSE  README.md  build.py  build_apk.py  changelog.txt  rebuild_game.py  requirements.txt  setup.py  termux-build.sh  zip_game.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  ios_test_report.yml
.github/workflows/: ci.yml  ios-simulator.yml
docs/: IOS.md  MODDING.md  SAVE_TRANSFER.md  TERMUX.md
game_original_files/: README.md
patches/readabletro/shaders/: background.fs  splash.fs
src/: back.lua  blind.lua  card.lua  card_character.lua  cardarea.lua  conf.lua  controller.lua  game.lua  globals.lua  main.lua  portrait_config.lua  tag.lua
src/engine/: controller.lua  moveable.lua  node.lua  sprite.lua  ui.lua
src/functions/: UI_definitions.lua  button_callbacks.lua  common_events.lua  misc_functions.lua  state_events.lua
src/smali/org/libsdl/app/: SDLActivity.smali
tests/: ios_inset_fixtures.txt  safe_area_test.lua
tools/: import_save.py
tools/ios_inset_probe/: Info.plist  main.swift
zygisk/: .gitignore  CMakeLists.txt  README.md  build_pkg.ps1  fetch_deps.ps1  gen_assets.py  update.json
zygisk/module/: customize.sh  module.prop
zygisk/patches/: shadowhook-nothing-override.patch
zygisk/src/: module.cpp
